# protobuf4cpp

./: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  example.pb.cc  example.pb.h  example.proto
src/Header/: IamAClass.h
src/Source/: IamAClass.cpp
test/tests/: CMakeLists.txt  jeff_test.cpp  testFILE_1.cpp
